--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,6 +49,7 @@ dependencies:
   firebase_core: ^3.10.0
   firebase_auth: ^5.4.1
   google_sign_in: ^6.2.2
+  flutter_facebook_auth: ^7.1.1
 
 
 dev_dependencies:
